# lotl

./: Cargo.toml
compiler/lotl-ast/: Cargo.toml
compiler/lotl-ast/src/: defs.rs  expr.rs  graph.rs  ids.rs  lib.rs  stmt.rs  types.rs
compiler/lotl-codegen-llvm/: Cargo.toml
compiler/lotl-codegen-llvm/src/: headers.rs  lib.rs  stmts.rs  utils.rs
compiler/lotl-error/: Cargo.toml
compiler/lotl-error/src/: diagnostic.rs  file.rs  lib.rs  results.rs  span.rs
compiler/lotl-lexer/: Cargo.toml
compiler/lotl-lexer/src/: err.rs  lexer.rs  lib.rs
compiler/lotl-llvm/: Cargo.toml
compiler/lotl-llvm-api/: Cargo.toml
compiler/lotl-llvm-api/src/: instruction.rs  lib.rs  module.rs  types.rs  value.rs
compiler/lotl-llvm-api/src/instruction/: aggregate.rs  binop.rs  block.rs  flow.rs  memory.rs  trunc.rs  unop.rs
compiler/lotl-llvm-api/src/module/: function.rs
compiler/lotl-llvm/src/: instruction.rs  lib.rs  module.rs  types.rs  value.rs
compiler/lotl-llvm/src/instruction/: aggregate.rs  binop.rs  block.rs  flow.rs  memory.rs  unop.rs
compiler/lotl-llvm/src/module/: function.rs  globals.rs
compiler/lotl-parser/: Cargo.toml
compiler/lotl-parser/src/: defs.rs  errors.rs  expr.rs  lib.rs  parser.rs  stmt.rs  util.rs
compiler/lotl-token/: Cargo.toml
compiler/lotl-token/src/: lib.rs
compiler/lotl-typechk/: Cargo.toml
compiler/lotl-typechk/src/: context.rs  errors.rs  gatherer.rs  lib.rs
compiler/lotl-typechk/src/gatherer/: exprs.rs  headers.rs  (+1 more)
examples/hello-world/: Lotl.toml
examples/hello-world/src/: main.lotl
lotl-llvm/: Cargo.toml
lotl-llvm/src/: instruction.rs  lib.rs  module.rs  types.rs  value.rs
lotl-llvm/src/instruction/: arithmetic.rs  binop.rs  block.rs  flow.rs  unop.rs
lotl-llvm/src/module/: function.rs  globals.rs
