[workspace]
members = [
    "compiler/lotl-ast", "compiler/lotl-error", "compiler/lotl-lexer",
    "compiler/lotl-llvm",
    "compiler/lotl-token"
]
resolver = "3"

[workspace.dependencies]
lotl-token = { path = "compiler/lotl-token" }
lotl-error = { path = "compiler/lotl-error" }
deranged = "0.5.4"
