[workspace]
members = [
    "compiler/lotl-ast", "compiler/lotl-error", "compiler/lotl-lexer",
    "compiler/lotl-llvm-api", "compiler/lotl-parser",
    "compiler/lotl-token"]
resolver = "3"

[workspace.dependencies]
lotl-token = { path = "compiler/lotl-token" }
lotl-error = { path = "compiler/lotl-error" }
lotl-ast = { path = "compiler/lotl-ast" }
lotl-lexer = { path = "compiler/lotl-lexer" }
lotl-parser = { path = "compiler/lotl-parser" }
lotl-llvm-api = { path = "compiler/lotl-llvm-api" }
uuid = { version = "1.18.1", features = ["v4"] }
