[package]
name = "lotl-codegen-llvm"
version = "0.1.0"
edition = "2024"

[dependencies]
lotl-llvm-api = { workspace = true }
lotl-ast = { workspace = true }
lotl-error = { workspace = true }
lotl-typechk = { workspace = true }

[dev-dependencies]
lotl-lexer = { workspace = true }
lotl-parser = { workspace = true }